--- a/.travis.yml
+++ b/.travis.yml
@@ -18,12 +18,12 @@ after_script:
   - git config user.email "lifengsofts@gmail.com"
   - git add .
   - git commit -m "Update docs"
-  - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:gh-pages
+  - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:master
 # E: Build LifeCycle
 
 branches:
   only:
-    - master
+    - gh-pages
 
 env:
   global:
