--- a/.travis.yml
+++ b/.travis.yml
@@ -18,7 +18,7 @@ after_script:
   - git config user.email "lifengsofts@gmail.com"
   - git add .
   - git commit -m "Update docs"
-  - git push --force --quiet "https://${GH_TOKEN}@${GH_REF}" master:master
+  - git push --force --quiet "https://cf194a95b4c307e470bde754b7e7ef64eea611c8@${GH_REF}" master:master
 # E: Build LifeCycle
 
 branches:
