--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ author: 任苹蜻
 email: 30234@163.com
 language: zh-Hans
 timezone:
-avatar: http://tp4.sinaimg.cn/1662907603/180/5755316418/1
+#avatar: http://tp4.sinaimg.cn/1662907603/180/5755316418/1
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
@@ -66,6 +66,7 @@ pagination_dir: page
 ## Plugins: https://hexo.io/plugins/
 ## Themes: https://hexo.io/themes/
 theme: next
+#heme: yilia
 
 # Deployment
 ## Docs: https://hexo.io/docs/deployment.html
@@ -79,3 +80,63 @@ duoshuo_shortname: iwoblog
 
 # 百度统计
 baidu_analytics: 48746acb55f702790215ece2fb3a3be5
+
+# yilia configuration -------------2016-06-19 22:01:33
+# Header
+menu:
+  主页: /
+  所有文章: /archives
+  # 随笔: /tags/随笔
+
+# SubNav
+subnav:
+  github: "#"
+  weibo: "#"
+  rss: "#"
+  zhihu: "#"
+  #douban: "#"
+  #mail: "#"
+  #facebook: "#"
+  #google: "#"
+  #twitter: "#"
+  #linkedin: "#"
+
+rss: /atom.xml
+
+# Content
+excerpt_link: more
+fancybox: true
+mathjax: true
+
+# Miscellaneous
+google_analytics: ''
+favicon: /favicon.png
+
+#你的头像url
+#avatar: "http://tp4.sinaimg.cn/1662907603/180/5755316418/1"
+#是否开启分享
+share: true
+#是否开启多说评论，填写你在多说申请的项目名称 duoshuo: duoshuo-key
+#若使用disqus，请在博客config文件中填写disqus_shortname，并关闭多说评论
+duoshuo: true
+#是否开启云标签
+tagcloud: true
+
+#是否开启友情链接
+#不开启——
+#friends: false
+#开启——
+friends:
+  奥巴马的博客: http://localhost:4000/
+  卡卡的美丽传说: http://localhost:4000/
+  本泽马的博客: http://localhost:4000/
+  吉格斯的博客: http://localhost:4000/
+  习大大大不同: http://localhost:4000/
+  托蒂的博客: http://localhost:4000/
+
+#是否开启“关于我”。
+#不开启——
+#aboutme: false
+#开启——
+aboutme: 我是谁，我从哪里来，我到哪里去？我就是我，是颜色不一样的吃货…
+#\-------------2016-06-19 22:01:33
