--- a/_config.yml
+++ b/_config.yml
@@ -10,7 +10,7 @@ author: 任苹蜻
 email: 30234@163.com
 language: zh-Hans
 timezone:
-#avatar: http://tp4.sinaimg.cn/1662907603/180/5755316418/1
+avatar: http://tp4.sinaimg.cn/1662907603/180/5755316418/1
 
 # URL
 ## If your site is put in a subdirectory, set url as 'http://yoursite.com/child' and root as '/child/'
